--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.3.1",
     "ethers": "^6.9.0",
     "express": "^4.18.2",
+    "i18next": "^25.7.2",
     "pg": "^8.11.0",
     "redis": "^4.6.0",
     "sharp": "^0.33.0",
