--- a/telegram-bot/package.json
+++ b/telegram-bot/package.json
@@ -2,12 +2,8 @@
   "name": "kik-collectibles-bot",
   "version": "1.0.0",
   "description": "Telegram bot for KIK Collectibles with ad monetization",
-  "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
-    "db:migrate": "node src/database/migrate.js",
-    "test": "jest"
+    "dev": "vercel dev"
   },
   "keywords": [
     "telegram",
@@ -27,6 +23,7 @@
     "express": "^4.18.2",
     "i18next": "^25.7.2",
     "multer": "^2.0.2",
+    "openai": "^6.10.0",
     "pg": "^8.11.0",
     "redis": "^4.6.0",
     "sharp": "^0.33.0",
