--- a/telegram-bot/vercel.json
+++ b/telegram-bot/vercel.json
@@ -1,1 +1,11 @@
-{}
+{
+  "version": 2,
+  "functions": {
+    "api/**/*.js": {
+      "maxDuration": 30
+    }
+  },
+  "env": {
+    "NODE_ENV": "production"
+  }
+}
