fix: Configure Vercel with builds and routes for proper serverless deployment

--- a/telegram-bot/.vercelignore
+++ b/telegram-bot/.vercelignore
@@ -1,6 +1,12 @@
-src/index.js
 node_modules
-.git
-*.log
 .env
 .env.local
+*.log
+.git
+src/
+README.md
+SETUP_GUIDE.md
+TRANSLATION_STATUS.md
+MINIAPP_STATUS.md
+MVP_DEPLOYMENT_GUIDE.md
+database-schema.sql
